--- a/pom.xml
+++ b/pom.xml
@@ -207,7 +207,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.54</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.4</version>
+        </dependency>
         <!--        文件上传依赖1-->
         <dependency>
             <groupId>commons-io</groupId>
