--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>Spring_AOP</groupId>
-    <artifactId>AOP</artifactId>
+    <groupId>Spring_mvc</groupId>
+    <artifactId>mvc</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <packaging>war</packaging>
